--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
               </div>
               <div class="col">
                 <div class="card" style="width: 18rem;">
-                  <a href="tokyo.html" target="_blank">
+                  <a href="tokyo.html" target="_blank">"#"</a>
                     <img src="images/Tokyo.jpg" class="card-img-top" alt="Tokyo">
                   <div class="card-body">
                     <p class="card-text">Tokyo</p>
-                  </a>
+                  
                   </div>
                 </div>
               </div>
