--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
               </div>
               <div class="col">
                 <div class="card" style="width: 18rem;">
-                  <a href="tokyo.html" target="_blank">"#"</a>
-                    <img src="images/Tokyo.jpg" class="card-img-top" alt="Tokyo">
+                  <a href="tokyo.html" target="_blank">
+                    <img src="images/Tokyo.jpg" class="card-img-top" alt="Tokyo"></a>
                   <div class="card-body">
                     <p class="card-text">Tokyo</p>
                   
