--- a/index.html
+++ b/index.html
@@ -132,20 +132,19 @@
               <div class="col">
                 <div class="card" style="width: 18rem;">
                   <a href="new-york.html" target="_blank">
-                    <img src="images/New-york.jpg" class="card-img-top" alt="NewYork"> 
+                    <img src="images/New-york.jpg" class="card-img-top" alt="NewYork"></a>
                   <div class="card-body">
                     <p class="card-text">NewYork</p>
-                  </a>
+                  
                   </div>
                 </div>
               </div>
               <div class="col">
                 <div class="card" style="width: 18rem;">
                   <a href="madrid.html" target="_blank">
-                    <img src="images/Madrid.jpg" class="card-img-top" alt="Madrid">
+                    <img src="images/Madrid.jpg" class="card-img-top" alt="Madrid"></a>
                   <div class="card-body">
                     <p class="card-text">Madrid</p>
-                  </a>
                   </div>
                 </div>
               </div>
@@ -155,7 +154,6 @@
                     <img src="images/Tokyo.jpg" class="card-img-top" alt="Tokyo"></a>
                   <div class="card-body">
                     <p class="card-text">Tokyo</p>
-                  
                   </div>
                 </div>
               </div>
@@ -167,20 +165,18 @@
             <div class="col align-self-start">
               <div class="card" style="width: 18rem;">
                 <a href="barcelona.html" target="_blank">
-                  <img src="images/Barcelona.jpg" class="card-img-top-barcelona" alt="Barcelona">
+                  <img src="images/Barcelona.jpg" class="card-img-top-barcelona" alt="Barcelona"></a>
                 <div class="card-body">
                   <p class="card-text">Barcelona</p>
-                </a>
                 </div>
               </div>
             </div>
             <div class="col align-self-end">
               <div class="card" style="width: 18rem;">
                 <a href="cairo.html" target="_blank">
-                  <img src="images/cairo.jpg" class="card-img-top" alt="cairo">
+                  <img src="images/cairo.jpg" class="card-img-top" alt="cairo"></a>
                 <div class="card-body">
                   <p class="card-text">Cairo</p>
-                </a>
                 </div>
               </div>
             </div>
