--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <div class="container text-center">
                 <div class="row align-items-center">
                   <div class="col">
-                    <div class="card" style="width: 18rem; left: 10%;">
+                    <div class="card" style="width: 18rem; left: 10%; margin-top: 20px;">
                       <img src="images/Paris.jpg" class="card-img-top" alt="Paris">
                       <div class="card-body">
                         <p class="card-text">Paris and different cities of france are the next upcoming tours for this holidays.</p>
@@ -57,7 +57,7 @@
                     </div>
                   </div>
                   <div class="col">
-                    <div class="card" style="width: 18rem; left: 10%">
+                    <div class="card" style="width: 18rem; left: 10% margin-top: 20px;">
                       <img src="images/Berlin.avif" class="card-img-top" alt="Berlin">
                       <div class="card-body">
                         <p class="card-text">Germany and it´s capital Berlin must be in our list for the next tours.</p>
@@ -65,7 +65,7 @@
                     </div>
                   </div>
                   <div class="col">
-                    <div class="card" style="width: 18rem; left: 10%">
+                    <div class="card" style="width: 18rem; left: 10% margin-top: 20px;">
                       <img src="images/Istanbul.webp" class="card-img-top" alt="Istanbul">
                       <div class="card-body">
                         <p class="card-text">We also include Turky and one the most important cities of this country in our exciting list.</p>
@@ -76,7 +76,7 @@
                   <div class="container text-center">
                     <div class="row align-items-end">
                       <div class="col">
-                        <div class="card" style="width: 18rem; left: 10%">
+                        <div class="card" style="width: 18rem; left: 10% margin-top: 20px;">
                           <img src="images/Rabat.webp" class="card-img-top" alt="Rabat">
                           <div class="card-body">
                             <p class="card-text">We include Rabat also because we belive that you will enjoid.</p>
@@ -84,7 +84,7 @@
                         </div>
                       </div>
                       <div class="col">
-                        <div class="card" style="width: 18rem; left: 10">
+                        <div class="card" style="width: 18rem; left: 10 margin-top: 20px;">
                           <img src="images/Buenos-aires.jpg" class="card-img-top" alt="Buenos-aires">
                           <div class="card-body">
                             <p class="card-text">Enjoy south america with our new tours to Argentina Buenos aires.</p>
@@ -92,7 +92,7 @@
                         </div>
                       </div>
                       <div class="col">
-                        <div class="card" style="width: 18rem; left: 10%">
+                        <div class="card" style="width: 18rem; left: 10% margin-top: 20px;">
                           <img src="images/Seoul.webp" class="card-img-top" alt="Seoul">
                           <div class="card-body">
                             <p class="card-text">South Korea and east Asia are in our list the best new trips just for you.</p>
@@ -130,7 +130,7 @@
           <div class="container text-center">
             <div class="row align-items-start">
               <div class="col">
-                <div class="card" style="width: 18rem; left: 10%">
+                <div class="card" style="width: 18rem; left: 10% margin-top: 20px;">
                   <a href="new-york.html" target="_blank">
                     <img src="images/New-york.jpg" class="card-img-top" alt="NewYork"></a>
                   <div class="card-body">
@@ -140,7 +140,7 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card" style="width: 18rem; left: 10%">
+                <div class="card" style="width: 18rem; left: 10% margin-top: 20px;">
                   <a href="madrid.html" target="_blank">
                     <img src="images/Madrid.jpg" class="card-img-top" alt="Madrid"></a>
                   <div class="card-body">
@@ -149,7 +149,7 @@
                 </div>
               </div>
               <div class="col">
-                <div class="card" style="width: 18rem; left: 10%">
+                <div class="card" style="width: 18rem; left: 10% margin-top: 20px;">
                   <a href="tokyo.html" target="_blank">
                     <img src="images/Tokyo.jpg" class="card-img-top" alt="Tokyo"></a>
                   <div class="card-body">
@@ -163,7 +163,7 @@
         <div class="container text-center">
           <div class="row">
             <div class="col align-self-start">
-              <div class="card" style="width: 18rem; left: 10%">
+              <div class="card" style="width: 18rem; left: 10% margin-top: 20px;">
                 <a href="barcelona.html" target="_blank">
                   <img src="images/Barcelona.jpg" class="card-img-top-barcelona" alt="Barcelona"></a>
                 <div class="card-body">
@@ -172,7 +172,7 @@
               </div>
             </div>
             <div class="col align-self-end">
-              <div class="card" style="width: 18rem; left: 10%">
+              <div class="card" style="width: 18rem; left: 10% margin-top: 20px;">
                 <a href="cairo.html" target="_blank">
                   <img src="images/cairo.jpg" class="card-img-top" alt="cairo"></a>
                 <div class="card-body">
