--- a/About us.html
+++ b/About us.html
@@ -73,7 +73,7 @@
               <div class="card" style="background-color: var(--bs-primary-bg-subtle);min-height: 90%;max-height: 90%;">
                 <p class="card-body">
                     Travel World envisions a future where traveling becomes a transformative journey for everyone, fostering personal growth, cultural understanding, and meaningful connections. By simplifying the travel experience.
-                    we aim to inspire people to explore beyond their comfort zones and embrace the world’s diversity. <br> Our mission is to make traveling seamless, accessible, and enriching, building a global community united by the shared joy of discovery and adventure. <br>
+                    we aim to inspire people to explore beyond their comfort zones and embrace the world’s diversity.
                 </p>
             </div>
             </div>
