--- a/new-york.html
+++ b/new-york.html
@@ -96,7 +96,7 @@
               </div>
               <br>
               <div class="col" >
-                <div class="card" style="min-height: 100%" margin-top: 20px;>
+                <div class="card" style="min-height: 100%" margin-bottom: 20px;>
                   <img src="images/American-museum.jpg" alt="American-museum" class="card-img-top">
                   <div class="card-body">
                     <h3 class="card-title">American-museum</h3>
