--- a/services.html
+++ b/services.html
@@ -60,7 +60,7 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/Calamares.webp" class="card-img-top" alt="Calamares">
                     <div class="card-body">
-                      <h5 class="card-title">Dessborre</h5>
+                      <h5 class="card-title">Desborre</h5>
                       <p class="card-text">
                        Chef Lucía Grávalos' most personal venture is situated near Madrid's Teatro Real,<br>
                        showcasing a blend of traditional, technical, and sustainable cuisine.<br>
